--- a/tasks/test.env
+++ b/tasks/test.env
@@ -1,3 +1,3 @@
 OPENWEATHER_API_KEY = e9ad2e06b3f1d6b100c9b20186bf202d
 
-Test2 = 4df1bbca7b65e146aa75166acfbb019d
+API_KEY = 4df1bbca7b65e146aa75166acfbb019d
