lagt in skitlearn i requirements_full

--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -15,5 +15,6 @@ pytz==2025.2
 seaborn==0.13.2
 six==1.17.0
 tzdata==2025.2
+scikit-learn>=1.0
 
 # Her har vi brukt pip freeze for å få nøyaktige versjoner av alle avhengigheter som er installert i miljøet vårt. 
